tests/NormalTests/paczka1/fuzzy1/33246691.err
Error in line 4: pvo3MVbtSV S622 7,9
Error in line 6: A856 S37 85,6
Error in line 26: pvo3MVbtSV S622 72,6
Error in line 31: ijGmQw A819 88,6
Error in line 34: ijGmQw S622 60,7
Error in line 39: ijGmQw S37 -5,7
